--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "bootstrap": "^4.3.1",
     "jest-styled-components": "^6.3.3",
     "react": "^16.8.6",
+    "react-autosuggest": "^9.4.3",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "reactstrap": "^8.0.1",
     "rebass": "^3.1.2",
+    "shards-react": "^1.0.3",
     "styled-components": "^4.3.2"
   },
   "scripts": {
