--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/core": "^10.0.16",
     "@material-ui/core": "^4.2.1",
+    "@rebass/preset": "^4.0.5",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
+    "emotion-theming": "^10.0.14",
     "jest-styled-components": "^6.3.3",
     "react": "^16.8.6",
     "react-autosuggest": "^9.4.3",
@@ -13,7 +16,6 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "reactstrap": "^8.0.1",
-    "rebass": "^3.1.2",
     "shards-react": "^1.0.3",
     "styled-components": "^4.3.2"
   },
