--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "reactstrap": "^8.0.1",
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0",
     "shards-react": "^1.0.3",
     "styled-components": "^4.3.2"
   },
@@ -44,6 +46,7 @@
     "axios-mock-adapter": "^1.17.0",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
+    "react-redux": "^7.1.1",
     "react-test-renderer": "^16.9.0"
   }
 }
