--- a/package.json
+++ b/package.json
@@ -10,16 +10,18 @@
     "bootstrap": "^4.3.1",
     "emotion-theming": "^10.0.14",
     "jest-styled-components": "^6.3.3",
+    "jquery": "^3.4.1",
     "react": "^16.8.6",
-    "react-autosuggest": "^9.4.3",
     "react-dom": "^16.8.6",
+    "react-redux": "^7.1.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "reactstrap": "^8.0.1",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
     "shards-react": "^1.0.3",
-    "styled-components": "^4.3.2"
+    "styled-components": "^4.3.2",
+    "typescript": "^3.6.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -46,7 +48,6 @@
     "axios-mock-adapter": "^1.17.0",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
-    "react-redux": "^7.1.1",
     "react-test-renderer": "^16.9.0"
   }
 }
