got a model for getting redux to work with thunks

--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "axios-mock-adapter": "^1.17.0",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
-    "react-test-renderer": "^16.9.0"
+    "react-test-renderer": "^16.9.0",
+    "redux-devtools-extension": "^2.13.8"
   }
 }
