--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
     "@rebass/preset": "^4.0.5",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
+    "chance": "^1.1.0",
     "emotion-theming": "^10.0.14",
+    "html2canvas": "^1.0.0-rc.3",
     "jest-styled-components": "^6.3.3",
     "jquery": "^3.4.1",
+    "jquery-ui": "^1.12.1",
+    "jquery-ui-dist": "^1.12.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.1.1",
