--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "react-spinners": "^0.6.1",
     "reactstrap": "^8.0.1",
     "redux": "^4.0.4",
+    "redux-devtools-extension": "^2.13.8",
+
     "redux-thunk": "^2.3.0",
     "shards-react": "^1.0.3",
     "styled-components": "^4.3.2",
